@@ -1,11 +1,11 @@
-import utils.UploadPetImageRequest;
-import com.fasterxml.jackson.databind.JsonNode;
+import Utils.UploadPetImageRequest;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.hamcrest.MatcherAssert;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import pojos.Pet;
 
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
@@ -15,7 +15,7 @@ import static utils.PetShopAPI.setupPetForQuery;
 
 public class UploadPetImageTest {
   private static HttpResponse<String> response;
-  private static JsonNode jsonBody;
+  private static Pet petResponse;
 
   @BeforeAll
   static void setup() {
@@ -31,7 +31,7 @@ public class UploadPetImageTest {
       System.out.println("Body: " + response.body());
 
       ObjectMapper mapper = new ObjectMapper();
-      jsonBody = mapper.readTree(response.body());
+      petResponse = mapper.readValue(response.body(), Pet.class);
     } catch (Exception e) {
       e.printStackTrace();
     }
@@ -47,30 +47,28 @@ public class UploadPetImageTest {
   @Test
   @DisplayName("Response contains correct pet ID")
   void uploadImageByPetId_ResponseContainsPetId() {
-    MatcherAssert.assertThat(jsonBody.get("id").asInt(), Matchers.is(7041));
+    MatcherAssert.assertThat(petResponse.getId(), Matchers.is(7041));
   }
 
   @Test
   @DisplayName("Response contains non-empty photoUrls")
   void uploadImageByPetId_ResponseContainsPhotoUrls() {
     MatcherAssert.assertThat(
-      jsonBody.get("photoUrls").isArray() && !jsonBody.get("photoUrls").isEmpty(),
-      Matchers.is(true)
+      petResponse.getPhotoUrls() != null && !petResponse.getPhotoUrls().isEmpty(), Matchers.is(true)
     );
   }
 
   @Test
   @DisplayName("Response contains tag name playful")
   void uploadImageByPetId_ResponseContainsTagPlayful() {
-    MatcherAssert.assertThat(jsonBody.get("tags").get(0).get("name").asText(), Matchers.is("string"));
+    MatcherAssert.assertThat(petResponse.getTags().getFirst().getName(), Matchers.is("string"));
   }
 
 
   @Test
   @DisplayName("Response contains non-empty photoUrls")
   void uploadImageByPetId_ResponseContainsStatusAvailable() {
-    MatcherAssert.assertThat(jsonBody.get("status").asText(), Matchers.is("available")
+    MatcherAssert.assertThat(petResponse.getStatus(), Matchers.is("available")
     );
   }
-
 }
